--- a/custom.css
+++ b/custom.css
@@ -1,12 +1,12 @@
 body {
-    font-family: 'Montserrat', sans-serif; background-color: #2F4F4F; 
+    font-family: 'Montserrat', sans-serif;
 }
 h1{
-    text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 20px; color: WhiteSmoke;
+    text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 40px;
 }
 
 #map {
-    width: 100%; height: 400px; margin-top: 10px; margin-bottom: 10px;
+    width: 100%; height: 400px; margin-top: 40px; margin-bottom: 40px;
 }
 
 .info-window {
@@ -15,10 +15,4 @@ h1{
 .info-content {
     color: #999;
 }
-#footer #col-sm-4 a{
-	color: WhiteSmoke;
-}
 
-p{
-	color: WhiteSmoke;
-}
