--- a/custom.css
+++ b/custom.css
@@ -1,12 +1,12 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif; background-color: #2F4F4F; 
 }
 h1{
-    text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 40px;
+    text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 20px; color: WhiteSmoke;
 }
 
 #map {
-    width: 100%; height: 400px; margin-top: 40px; margin-bottom: 40px;
+    width: 100%; height: 400px; margin-top: 10px; margin-bottom: 10px;
 }
 
 .info-window {
@@ -14,5 +14,8 @@ h1{
 }
 .info-content {
     color: #999;
+}
+#footer #col-sm-4 a{
+	color: WhiteSmoke;
 }
 
