--- a/custom.css
+++ b/custom.css
@@ -1,24 +1,35 @@
-body {
-    font-family: 'Montserrat', sans-serif; background-color: #c2c2d6; 
+body, html {
+   
+    font-family: 'Montserrat', sans-serif; 
+
+	height:100%;
+
+	
+
+	background-image: url("./dataFiles/lakeOntarioDawn.jpg");
+	background-position: relative;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+
 }
-h1{
-    text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 20px; color: WhiteSmoke;
+h2{
+	text-align: center;
+	padding: 10px;
+}
+a{
+	color: #2c333f;
+}
+.links{
+
+	text-align: center;
+	padding: 20px;
+	font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.06em; 
+    line-height: 10px;
 }
 
-#map {
-    width: 100%; height: 400px; margin-top: 10px; margin-bottom: 10px;
-}
-
-.info-window {
-    font-family: 'Montserrat', sans-serif;
-}
-.info-content {
-    color: #999;
-}
-#footer #col-sm-4 a{
-	color: WhiteSmoke;
-}
-
-p{
-	color: WhiteSmoke;
+.contact{
+	text-align: center;
+	margin: 40px;
 }
